# dotenv-precommit-hook

./: .pre-commit-hooks.yaml  pyproject.toml
src/dotenv_template/: __init__.py  create_template.py
